# obsidian-boy

./: .aider.conf.yml  .gitignore  README.md  pyproject.toml  test_boy.py
attic/: crewtest.py  plan-crewai.md
docs/: 2024-08-26.md  CONVENTIONS.md  aider.md  architecture.puml  generate-plan-crewai.md  generate-plan.md  plan.md  project.md  stubs.py  temp.md  workflow.puml
docs/crewai/: crewai-all.xml
docs/langgraph/: multi_agent.md
obsidian_boy/: crew_notes.py  crewtest.py  daily_note_processor.py  file_system_interface.py  knowledge_base.py  obsidian_interface.py  researcher.py  terminal_interface.py  types.py  web_scraper.py
tests/: test_daily_note_processor.py  test_daily_note_processor.py.fails  test_file_system_interface.py  test_integration.py  test_knowledge_base.py  test_obsidian_interface.py  test_terminal_interface.py  test_web_scraper.py
vault/Daily/: 2024-01-01.md  2024-08-26.md  2024-09-06.md
