[tool.poetry]
name = "obsidian_boy"
version = "0.1.0"
description = "An Obsidian AI assistant"
authors = ["Olaf Geibig <olaf@pobox.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
langchain = "^0.2.16"
langgraph = "^0.2.16"
langchain-openai = "^0.1.23"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
langchain-groq = "^0.1.9"
langchain-anthropic = "^0.1.23"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
